<resources>
    <string name="app_name">p4p3r 0v3r</string>
    <string name="password">Your password</string>
    <string name="email">Your email</string>
    <string name="pseudo">Your pseudo</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="no_account">I have no account</string>
    <string name="my_conversations">My conversations</string>
    <string name="new_conversation">New conversation</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>

    <string name="search_an_user">Search...</string>
    <string name="define_your_pattern">Define your pattern</string>
    <string name="set_your_pattern">Enter your personal pattern</string>
    <string name="pattern_explanation">Choose 4 colors and remember the order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
